ver. 1.0.1 -- Oct 1, 2018
  moved from subversion to github

ver. 1.0.0 -- May 30, 2017
  converted from bash script to full blown java application