@@ -2,6 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.pipelines.QtlRsoAnnotation" >
-        <property name="version" value="QtlRsoAnnotation v. 1.0.1 Oct 1, 2018" />
+        <property name="version" value="QtlRsoAnnotation  -- build 2019-10-24" />
+        <property name="createdBy" value="181" /><!-- pipeline id -->
     </bean>
 </beans>
