@@ -11,12 +11,10 @@ if [ "$SERVER" = "REED" ]; then
 fi
 
 cd $APPDIR
-pwd
-DB_OPTS="-Dspring.config=$APPDIR/../properties/default_db.xml"
-LOG4J_OPTS="-Dlog4j.configuration=file://$APPDIR/properties/log4j.properties"
-export QTL_RSO_ANNOTATION_OPTS="$DB_OPTS $LOG4J_OPTS"
 
-bin/$APPNAME "$@" 2>&1 | tee run.log
+java -Dspring.config=$APPDIR/../properties/default_db.xml \
+    -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
+    -jar lib/$APPNAME.jar "$@" 2>&1 | tee run.log
 
 /home/rgddata/pipelines/OntologyLoad/run_single.sh RS -skip_download
 
